--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav id="navbar">
       <div class="navbar__logo">
         <i class="fas fa-stream"></i>
-        <a href="index.html">Youngil</a>
+        <a href="https://ohyoungil.github.io/WEB-PAGE/">Youngil</a>
       </div>
       <div class="navbar__items">
         <ul class="navbar__menu">
@@ -147,21 +147,21 @@
           </button>
         </div>
         <div class="work__projects">
-          <a href="#" class="project" target="blank"
+          <a href="https://ohyoungil.github.io/MiniGame/" class="project" target="blank"
             ><img src="imgs/미니게임.png" alt="" class="project__img" />
             <div class="project__description">
               <h3>MiniGame</h3>
               <span>HTML, CSS, JavaScript</span>
             </div>
           </a>
-          <a href="#" class="project" target="blank"
+          <a href="https://ohyoungil.github.io/KAKAO/" class="project" target="blank"
             ><img src="imgs/kakao.png" alt="" class="project__img" />
             <div class="project__description">
               <h3>Kakao</h3>
               <span>HTML, CSS, JavaScript</span>
             </div>
           </a>
-          <a href="#" class="project" target="blank"
+          <a href="https://ohyoungil.github.io/YouTuBe-Basic/" class="project" target="blank"
             ><img src="imgs/YouTuBeBasic.png" alt="" class="project__img" />
             <div class="project__description">
               <h3>YouTuBe-Basic</h3>
