--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="imgs/me.png" alt="#" class="home__avatar" />
         <h1 class="home__title">Hello, <br />I'm Youngil Oh</h1>
         <h2 class="home__description">
-          A software Enginner currently residing in Seoul, Korea.
+          Programmer currently residing in Seoul, Korea.
         </h2>
         <button class="home__contact"><a href='#contact'>Contact Me</a></button>
       </div>
@@ -49,11 +49,10 @@
 
     <section id="about" class="section section__container">
       <h1 class="about__title">About me</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto
-        quas ut explicabo tempora provident harum et, quasi nam obcaecati odio
-        sed ullam, laborum aliquid in tenetur eveniet fugiat. Ducimus,
-        architecto.
+        <p>
+          생각하는 프로그래머, 열정이 있는 프로그래머<br/>
+          HTML, CSS, JavaScript 그리고 React를 배우고 있습니다<br/>
+          프론트엔드부터 백엔드까지 풀스택 프로그래머를 목표로 하고 있습니다<br/> 
       </p>
       <div class="about__majors">
         <div class="major">
@@ -82,10 +81,9 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
-          reprehenderit, accusantium amet rerum et nisi delectus ab quasi
-          recusandae voluptates optio laborum doloribus magni, porro qui
-          expedita magnam consequatur voluptate.
+          HTML, CSS, JavaScript에 대한 기본적인 이해도를 가지고 있습니다<br/>
+          HTML, CSS를 이용해서 포트폴리오 사이트나, Kakao, YouTuBe 페이지를 만들 수 있습니다<br/>
+          Vanilla JavaScript를 이용해서 미니게임을 만들 수 있습니다. 그리고 React를 배우고 있습니다<br/> 
         </p>
         <div class="skillset">
           <div class="skillset-left">
