html-text detail

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
     <section id="about" class="section section__container">
       <h1 class="about__title">About me</h1>
         <p>
-          생각하는 프로그래머, 열정이 있는 프로그래머<br/>
-          HTML, CSS, JavaScript 그리고 React를 배우고 있습니다<br/>
-          프론트엔드부터 백엔드까지 풀스택 프로그래머를 목표로 하고 있습니다<br/> 
+          생각하는 프로그래머, 열정이 있는 프로그래머<br/> 
+          HTML, CSS, JavaScript 그리고 React를 배우고 있습니다. 프론트엔드부터 백엔드까지 풀스택 프로그래머를 목표로 하고 있습니다.
       </p>
       <div class="about__majors">
         <div class="major">
@@ -81,9 +80,7 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          HTML, CSS, JavaScript에 대한 기본적인 이해도를 가지고 있습니다<br/>
-          HTML, CSS를 이용해서 포트폴리오 사이트나, Kakao, YouTuBe 페이지를 만들 수 있습니다<br/>
-          Vanilla JavaScript를 이용해서 미니게임을 만들 수 있습니다. 그리고 React를 배우고 있습니다<br/> 
+          HTML, CSS, JavaScript에 대한 기본적인 이해도를 가지고 있습니다. HTML, CSS를 이용해서 포트폴리오 사이트나, Kakao, YouTuBe 페이지를 만들 수 있습니다. Vanilla JavaScript를 이용해서 미니게임을 만들 수 있습니다. 그리고 React를 배우고 있습니다.
         </p>
         <div class="skillset">
           <div class="skillset-left">
